# repeerv3

./: 1-sentence.md  5-sentences.md  CLAUDE.md  PSEUDOCODE.md  adapters.md  claude.md  etherscan-adapter.md  opus.md  readme.md  relink.sh  run_tests.sh  test-all.sh  todo
browser-extension/: .gitignore  README.md  manifest.firefox.json  manifest.json.backup  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
browser-extension/scripts/: build-all.js  build-firefox.js  generate-icons.sh
browser-extension/src/: background.ts  permissions.ts
browser-extension/src/adapters/: registry.ts
browser-extension/src/agent-details/: index.html  main.ts
browser-extension/src/content/: index.ts  styles.css
browser-extension/src/experience/: index.html  main.ts
browser-extension/src/experience-review/: index.html  main.ts
browser-extension/src/popup/: App.vue  index.html
browser-extension/tests/: background.test.ts  content.test.ts  popup.test.ts
demo/: README.md  generate_demo_data.ts  package.json  test-page.html  tsconfig.json
docs/: DATA_MODEL.md  README.md  adapter-development.md
tests/: .gitignore  federation.test.ts  integration.test.ts  integration_test.ts  jest.config.js  package.json  setup.ts  simple-federation.test.ts  tsconfig.json
trust-client/: jest.config.js  package.json  tsconfig.json
trust-client/src/: client.ts  index.ts  types.ts
trust-client/src/adapters/: aliexpress.ts  domain.ts  ethereum.ts  index.ts
trust-client/src/utils/: id-domains.ts
trust-client/tests/: client.test.ts
trust-node/: .gitignore  Cargo.toml  generate_test_data.sh  run_test_nodes.sh
trust-node/migrations/: 20240101000000_initial.sql  20240102000000_split_agent_id.sql
trust-node/src/: api.rs  lib.rs  main.rs  node.rs  protocols.rs  query_engine.rs  storage.rs  types.rs
trust-node/tests/: cache_test.rs  multi_node_test.rs  unit_tests.rs
