[package]
name = "trust-node"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trust-node"
path = "src/main.rs"

[lib]
name = "trust_node"
path = "src/lib.rs"

[dependencies]
libp2p = { version = "0.54", features = ["tokio", "dns", "tcp", "noise", "yamux", "kad", "identify", "request-response", "macros"] }
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
async-trait = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.14"